<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_margin">

        <!-- overview layout -->
        <LinearLayout
            android:id="@+id/overview_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- overview label -->
            <TextView
                android:text="@string/overview_label"
                style="@style/CategoryStyle"/>

            <!-- input fields-->
            <LinearLayout
                style="@style/LinearLayoutStyle"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:paddingTop="@dimen/l_l_padding_top"
                android:orientation="vertical">

                <!-- name field-->
                <EditText
                    android:id="@+id/edit_vegetable_name"
                    android:hint="@string/edit_hint_vegetable_name"
                    android:inputType="textCapWords"
                    style="@style/EditorFieldStyle"/>

                <!-- vegetable image -->
                <ImageView
                    android:id="@+id/edit_vegetable_image"
                    android:layout_width="@dimen/list_item_height"
                    android:layout_height="@dimen/list_item_height"
                    android:contentDescription="@string/vegetable_image_view_placeholder"/>

                <!-- add image button -->
                <Button
                    android:id="@+id/editor_add_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_add_image_button" />

            </LinearLayout>
        </LinearLayout>

        <!-- price layout -->
        <LinearLayout
            android:id="@+id/price_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- price label -->
            <TextView
                android:text="@string/price_label"
                style="@style/CategoryStyle"/>

            <!-- Input fields -->
            <RelativeLayout
                style="@style/LinearLayoutStyle"
                android:paddingStart="4dp"
                android:paddingEnd="4dp">

                <!-- price field -->
                <EditText
                    android:id="@+id/edit_vegetable_price"
                    android:hint="@string/edit_hint_vegetable_price"
                    android:inputType="numberDecimal"
                    style="@style/EditorFieldStyle"/>

                <!-- Units for price ($) -->
                <TextView
                    android:id="@+id/label_price_units"
                    android:text="@string/edit_vegetable_price_units"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>
        </LinearLayout>

        <!-- quantity layout -->
        <LinearLayout
            android:id="@+id/quantity_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- quantity label -->
            <TextView
                android:text="@string/quantity_label"
                style="@style/CategoryStyle"/>

            <!-- input field -->
            <LinearLayout
                style="@style/LinearLayoutStyle"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:paddingTop="@dimen/l_l_padding_top"
                android:orientation="horizontal">

                <!-- minus button -->
                <Button
                    android:id="@+id/minus_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/editor_minus_button"/>

                <!-- quantity field-->
                <EditText
                    android:id="@+id/edit_vegetable_quantity"
                    android:hint="@string/edit_hint_vegetable_quantity"
                    android:inputType="number"
                    style="@style/EditorFieldStyle"/>

                <!-- plus button -->
                <Button
                    android:id="@+id/plus_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/edit_plus_button"/>
            </LinearLayout>
        </LinearLayout>

        <!-- supplier layout -->
        <LinearLayout
            android:id="@+id/supplier_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- quantity label -->
            <TextView
                android:text="@string/supplier_label"
                style="@style/CategoryStyle"/>

            <!-- Input field -->
            <LinearLayout
                style="@style/LinearLayoutStyle"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:paddingTop="@dimen/l_l_padding_top"
                android:orientation="vertical">

                <!-- supplier drop-down spinner -->
                <Spinner
                    android:id="@+id/edit_vegetable_supplier"
                    android:layout_height="48dp"
                    android:layout_width="wrap_content"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
        </LinearLayout>

        <!-- order layout -->
        <LinearLayout
            android:id="@+id/order_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- order label -->
            <TextView
                android:text="@string/order_label"
                style="@style/CategoryStyle"/>

            <!-- input field -->
            <LinearLayout
                style="@style/LinearLayoutStyle"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:paddingTop="@dimen/l_l_padding_top"
                android:orientation="vertical">

                <!-- add image button -->
                <Button
                    android:id="@+id/editor_order_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_order_intent_button" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>